fix spacing of count and upvote

--- a/public/css/tf-styles.css
+++ b/public/css/tf-styles.css
@@ -3551,6 +3551,11 @@ ul.doc li {
 .tf-vote-btn {
 	width: 100%;
 	text-align: center;
+	margin-bottom: -3px;
+}
+
+.tf-vote-btn span {
+	color:#ff0d60 !important;
 }
 
 .tf-vote-count {
